# share-bill-llm-service

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  draft-travel-assisstant.ipynb  main.py  pyproject.toml  requirements.txt
.virtual_documents/notebook/: Untitled.ipynb
app/: main.py
app/dependencies/: auth.py  fileUpload.py
app/dependencies/__test__/: test_fileUpload.py
app/dtos/: exceptions.py  receipt.py  responses.py
app/external_services/: firebase.py  googleAI.py
app/llm/chains/: receiptExtractor.py  travelAssisstant.py
app/llm/models/: google.py
app/llm/outputSchemas/: receiptExtractor.py
app/llm/prompts/: receiptExtractor.py  system.py  travelAssisstant.py
app/middlewares/: authentication.py
app/routers/: llm.py  root.py
app/services/: item.py  root.py
notebooks/: Untitled.ipynb
