[project]
name = "share-bill-llm-service"
version = "0.1.0"
description = "api service for sharebill"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "firebase-admin>=7.1.0",
    "google>=3.0.0",
    "google-genai>=1.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "pydantic>=2.11.7",
    "typing>=3.10.0.0",
]

[tool.ruff.lint]
# Enable linting rules (e.g., unused imports, import sorting)
select = ["F401", "I"]
# Automatically fix issues when using --fix
fixable = ["F401", "I"]

# Sort imports according to PEP 8 conventions
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["app"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/*/__test__/*",
    "*/__init__.py"
]

[tool.coverage.html]
directory = ".coverage_html_report"

[dependency-groups]
dev = [
    "jupyter-lsp>=2.3.0",
    "jupyterlab>=4.4.7",
    "jupyterlab-lsp>=5.2.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-lsp-server>=1.13.1",
    "ruff>=0.12.10",
]
